--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
         <p>Estudante de programação</p>
     </header>
 
+        <main>
+            <section>
+                <h3>Minhas habilidades</h3>
+                <ul>
+                    <li>Lógica de programção</li>
+                    <li>HTML e CSS</li>
+                    <li>Trabalho em equipe</li>
+                    <li>Redes e IOT</li>
+                </ul>
+            </section>
+        </main>
 </body>
     </html>
