--- a/index.html
+++ b/index.html
@@ -4,7 +4,39 @@
 </head>
 
     <style>
+        body{
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background-color: rgb(0, 0, 0);
+            margin: 0;
+            padding: 20px;
 
+        }
+       header{
+        background-color: pink;
+        color: rgb(245, 29, 105);
+        padding: 20px;
+        text-align: center;
+       }
+        h2{
+            color: rgb(245, 29, 105);
+        }
+        h3{
+            color: rgb(245, 98, 122);
+        }
+        li{
+            color: rgb(245, 98, 122);
+        }
+        
+        section{
+            background-color: pink;
+            padding: 15px;
+            margin-bottom: 20px;
+            border: 1px solid;
+            border-radius: 8px;
+        }
+        ul{
+            list-style-type: square;
+        }
     </style>
 <body>
     <header>
