--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         color: rgb(245, 29, 105);
         padding: 20px;
         text-align: center;
+        border: 5px solid;
+        border-radius: 8px;
        }
         h2{
             color: rgb(245, 29, 105);
@@ -31,7 +33,7 @@
             background-color: pink;
             padding: 15px;
             margin-bottom: 20px;
-            border: 1px solid;
+            border: 2px solid;
             border-radius: 8px;
         }
         ul{
