--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body{
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-color: rgb(0, 0, 0);
+            background-color: rgb(255, 197, 229);
             margin: 0;
             padding: 20px;
 
@@ -14,10 +14,11 @@
        header{
         background-color: pink;
         color: rgb(245, 29, 105);
-        padding: 20px;
+        padding: 5px;
         text-align: center;
         border: 5px solid;
         border-radius: 8px;
+        margin: 10px;
        }
         h2{
             color: rgb(245, 29, 105);
@@ -35,10 +36,22 @@
             margin-bottom: 20px;
             border: 2px solid;
             border-radius: 8px;
+            border-color: rgb(245, 29, 105);
         }
         ul{
             list-style-type: square;
         }
+
+ /*@media = estilos responsivos, isso vai garantir que o conteúdo não fique apertado em telas menores. */
+        @media (max-width: 600px) {
+    body {
+        padding: 10px;
+    }
+    section {
+        padding: 10px;
+    }
+}
+
     </style>
 <body>
     <header>
@@ -56,6 +69,16 @@
                     <li>Redes e IOT</li>
                 </ul>
             </section>
+
+            <section>
+                <h3>Cursos</h3>
+            <ul>
+                <li>Curso e Introdução a programação</li>
+                <li>Curso de HTML e CSS básico</li>
+                <li>Curso de Arudino</li>
+            </ul>
+            </section>
+        
         </main>
 </body>
     </html>
