--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <style>
         body{
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-color: rgb(255, 197, 229);
+            background-color: rgb(245, 197, 255);
             margin: 0;
             padding: 20px;
 
         }
        header{
-        background-color: pink;
-        color: rgb(245, 29, 105);
+        background-color: rgb(245, 197, 255);
+        color: rgb(196, 126, 225);
         padding: 5px;
         text-align: center;
         border: 5px solid;
@@ -21,22 +21,22 @@
         margin: 10px;
        }
         h2{
-            color: rgb(245, 29, 105);
+            color: rgb(206, 110, 247);
         }
         h3{
-            color: rgb(245, 98, 122);
+            color: rgb(206, 110, 247);
         }
         li{
-            color: rgb(245, 98, 122);
+            color: rgb(196, 126, 225);
         }
         
         section{
-            background-color: pink;
+            background-color: rgb(236, 189, 236)m;
             padding: 15px;
             margin-bottom: 20px;
             border: 2px solid;
             border-radius: 8px;
-            border-color: rgb(245, 29, 105);
+            border-color: rgb(196, 126, 225);
         }
         ul{
             list-style-type: square;
@@ -79,6 +79,14 @@
             </ul>
             </section>
         
+            <section>
+                <h3>Estudos</h3>
+            <ul>
+                <li>Ensino médio em andamento (2ºanoEM)</li>
+                <li>Ensino fundamental 2 completo</li>
+                <li>ensino fundamental 1 completo</li> 
+            </ul>
+            </section>
         </main>
 </body>
     </html>
